--- a/TA_officescan/default/app.conf
+++ b/TA_officescan/default/app.conf
@@ -2,15 +2,14 @@
 # Splunk app configuration file
 #
 
-[install]
-is_configured = 0
-
 [ui]
 is_visible = 1
-label = ta_officescan
+label = Splunk_TA_officescan
 
 [launcher]
-author = Danial and team
+author = UnderDefense
 description = no
-version = 1.0.0
+version = 1.0.2
 
+[package]
+id = TA_officescan
