--- a/TA_officescan/default/eventtypes.conf
+++ b/TA_officescan/default/eventtypes.conf
@@ -1,2 +1,4 @@
 [officescan:detection]
-search = `officescan_index` sourcetype=officescan Virus!=""
+search = index=security_app sourcetype=officescan Virus
+disabled = 0
+color = et_blue
